--- a/views/home.html
+++ b/views/home.html
@@ -71,7 +71,7 @@
   </section>
 
   <footer>
-    <p class="footerCardking">Todos os direitos reservados @cardking</p>
+    <p class="footerHome">Todos os direitos reservados @cardking</p>
   </footer>
 </body>
 </html>
