fim da estilizacao

--- a/views/home.html
+++ b/views/home.html
@@ -10,62 +10,63 @@
   <header class="headerHome">
     <a href="./index.html">Login/Cadastro</a>
     <img src="../image/cardking.png" alt="logo do site" class="logo">
-  </header>headerHome
-  <h1 class="titlehome"></h1>
+  </header>
+  <h1 class="titlehome">Escolha aqui o seu card</h1>
   <section class="card-section">
     <div class="card-container">
       <div class="card-row">
-        <div>
-          <img src="../image/imagem1.jpg" alt="carta do mew" srcset="">
-          <p>Mew</p>
-          <p>Quantidade disponivel: 10un</p>
-          <p class="valor">$100</p>
-          <button>comprar</button>
-        </div>
+          <div class="card">
+            <img src="../image/imagem1.jpg" alt="carta do mew" srcset="">
+            <p>Mew</p>
+            <p>Quantidade disponivel: 10un</p>
+            <p class="valor">$100</p>
+            <button>comprar</button>
+          </div>
 
-        <div>
-          <img src="../image/imagem2.jpg" alt="carta do Gengar" srcset="">
-          <p>Gengar</p>
-          <p>Quantidade disponivel: 10un</p>
-          <p class="valor">$200</p>
-          <button>comprar</button>
-          
-        </div>
-          <img src="../image/imagem3.jpg" alt="carta do Luffy" srcset="">
-          <p>Luffy</p>
-          <p>Quantidade disponivel: 10un</p>
-          <p class="valor">$300</p>
-          <button>comprar</button>
+          <div class="card">
+            <img src="../image/imagem2.jpg" alt="carta do Gengar" srcset="">
+            <p>Gengar</p>
+            <p>Quantidade disponivel: 10un</p>
+            <p class="valor">$200</p>
+            <button>comprar</button>
+            
+          </div >
 
-        </div>
+          <div class="card">
+            <img src="../image/imagem3.jpg" alt="carta do Luffy" srcset="">
+            <p>Luffy</p>
+            <p>Quantidade disponivel: 10un</p>
+            <p class="valor">$300</p>
+            <button>comprar</button>
+          </div>
+
         <div class="card-row">
-          
-        <div>
-          <img src="../image/imagem4.jpg" alt="carta do Blue-Eyes White Dragon" srcset="">
-          <p>Blue-Eyes White Dragon</p>
-          <p>Quantidade disponivel: 10un</p>
-          <p class="valor">$500</p>
-          <button>comprar</button>
 
-        </div>
+          <div class="card">
+            <img src="../image/imagem4.jpg" alt="carta do Blue-Eyes White Dragon" srcset="">
+            <p>Blue-Eyes White Dragon</p>
+            <p>Quantidade disponivel: 10un</p>
+            <p class="valor">$500</p>
+            <button>comprar</button>
 
-        <div>
-          <img src="../image/imagem5.jpg" alt="carta do Agumon" srcset="">
-          <p>Agumon</p>
-          <p>Quantidade disponivel: 10un</p>
-          <p class="valor">$400</p>
-          <button>comprar</button>
+          </div>
 
-        </div>
+          <div class="card">
+            <img src="../image/imagem5.jpg" alt="carta do Agumon" srcset="">
+            <p>Agumon</p>
+            <p>Quantidade disponivel: 10un</p>
+            <p class="valor">$400</p>
+            <button>comprar</button>
 
-        <div>
-          <img src="../image/imagem6.jpg" alt="carta do World Champion" srcset="">
-          <p>World Champion</p>
-          <p>Quantidade disponivel: 10un</p>
-          <p class="valor">$700</p>
-          <button>comprar</button>
+          </div>
 
-        </div>
+          <div class="card">
+            <img src="../image/imagem6.jpg" alt="carta do World Champion" srcset="">
+            <p>World Champion</p>
+            <p>Quantidade disponivel: 10un</p>
+            <p class="valor">$700</p>
+            <button>comprar</button>
+          </div>
       </div>
     </div>
   </section>
