--- a/views/index.html
+++ b/views/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login/Cadastro</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="../style/style.css">
 </head>
 <body>
     <header class="headerLogin">
         <p>Aqui é onde você coleciona as melhores cartas</p>
-        <img src="image/cardking.png" alt="Logo" class="logo">
+        <img src="../image/cardking.png" alt="Logo" class="logo">
     </header>
     <h1 class="tituloLogin"> Bem vindo ao melhor site de colecionador de cartas</h1>
 <main>
@@ -40,7 +40,7 @@
 </main>
 
 <section>
-    <img src="image/banner.png" class="banner" alt="Banner de desconto" >
+    <img src="../image/banner.png" class="banner" alt="Banner de desconto" >
 </section>
 
 <footer>
