--- a/style/home.css
+++ b/style/home.css
@@ -22,7 +22,7 @@ a {
 
 body {
   background-color: rgb(235, 222, 245);
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 .logo {
@@ -35,4 +35,72 @@ body {
   font-size:  30px;
   color: #dfaf67;
   margin-bottom: 10px;
+}
+
+.card-section {
+  text-align: center;
+  padding: 0 0 10px 0;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2px;
+  max-width: 80%;
+  margin: auto;
+}
+
+.card-row {
+  width: 50%;
+  display: flex;
+  height: 100%;
+  margin: 2px;
+}
+
+.card {
+  width: 50%;
+  box-shadow: 10px 10px 4px rgba(0, 0, 0, 1);
+  padding: 10px;
+  height: 80%;
+}
+
+.card img {
+  height: 230px;
+}
+
+.valor {
+  color: rgb(241, 78, 18);
+  font-weight: bold;
+  font-size: 20px;
+}
+
+button {
+  background-color: #FFC107;
+  border: 2px solid #E6B000;
+  color: #333;
+  padding: 5px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+button:hover {
+  background-color: chartreuse;
+  border-color: #C09E00;
+}
+
+.footerHome {
+  background-color: blueviolet;
+  font-size: 25px;
+  color: #dfaf67;
+  align-items: center;
+  line-height: 50px;
+  width: 100%;
+  height: 65px;
 }
